Slabs 'n Stairs changelog:
------------------------
V 0.0.1.114 @ 2022/07/09
- updated and / or (re-)added:
    * 3 new Dirt Block variants
    * Andesite Button & Pressure Plate
    * Packed & Blue Ice Slabs & Stairs
    * Cobblestone Button & Pressure Plate
    * Citrine Stairs
    * Diorite Button & Pressure Plate
    * Granite Button & Pressure Plate
    * Smooth Stone Button, Pressure Plate & Stairs
    * Localizations en_US & de_DE
    * gradle files & classes
    * loot tables & needed tools
    * changelog, MANIFEST & modsToml

------------------------
V 0.0.1.114 @ 2022/07/09
- again texture correction polished buttons in hand
- added 3 dirt variations
- updated to the latest Forge-Version (40.1.59)

------------------------
V 0.0.1.113 @ 2022/07/07
- added 1st preparation for ModSettings

------------------------
V 0.0.1.112 @ 2022/07/06
- fixing an issue of the polished buttons in hand texture

------------------------
V 0.0.1.111 @ 2022/07/05
- readd polished button variants of Andesite, Diorite, and Granite

------------------------
V 0.0.1.110 @ 2022/07/03
- update Button: remove Collision, like the Stone-Button
- added Buttons: Andesite, Diorite, Granite and there polished variants
- some texture changes
- adding some Classes for (new) Blocks, Items, Fluid/s, Sound/s, etc.

------------------------
V 0.0.1.109 @ 2022/07/01
- porting to Minecraft JE 1.18.2
- updated to Forge 40.1.54

----------------------
V 0.0.1.0 @ 2022/06/26
- initial version