@@ -1,0 +1,17 @@
+package net.dancervlt69.slabsnstairs.Init.World.Features;
+
+import net.dancervlt69.slabsnstairs.Init.Blocks.ModBlocks;
+import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
+
+import java.awt.*;
+
+public class ModConfiguredFeatures {
+    /*
+    public static final List<BlockConfiguration.TargetBlockState> OVERWORLD_DIRT_COBBLE = List.of(
+            BlockConfiguration.target(BlockFeatures.DIRT.REPLACEABLES, ModBlocks.DIRT_COBBLE.get().defaultBlockState())
+    );
+
+    public static final Holder<ConfiguredFeature, ?>> DIRT_COBBLE = FeatureUtils.register("dirt_cobble",
+    Feature.GRASS, new BlockConfiguration(OVERWORLD_DIRT_COBBLE, 3));
+    */
+}
