@@ -1,21 +1,23 @@
 {
 	"credit": "Made with Blockbench",
 	"parent": "minecraft:block/block",
+  "ambientocclusion": false,
 	"textures": {
-		"all": "slabsnstairs:block/growth_stop",
-		"particle": "slabsnstairs:block/growth_stop"
+		"side_n": "slabsnstairs:block/growth_stop_01",
+    "top": "slabsnstairs:block/growth_stop",
+		"particle": "slabsnstairs:block/growth_stop_01"
 	},
 	"elements": [
 		{
 			"from": [7, 7, 7],
 			"to": [9, 9, 9],
 			"faces": {
-				"north": {"uv": [6, 6, 10, 10], "texture": "#all"},
-				"east": {"uv": [6, 6, 10, 10], "texture": "#all"},
-				"south": {"uv": [6, 6, 10, 10], "texture": "#all"},
-				"west": {"uv": [6, 6, 10, 10], "texture": "#all"},
-				"up": {"uv": [6, 6, 10, 10], "texture": "#all"},
-				"down": {"uv": [6, 6, 10, 10], "texture": "#all"}
+				"north": {"uv": [6, 6, 10, 10], "texture": "#side_n"},
+				"east": {"uv": [6, 6, 10, 10], "texture": "side_n"},
+				"south": {"uv": [6, 6, 10, 10], "texture": "#side_n"},
+				"west": {"uv": [6, 6, 10, 10], "texture": "#side_n"},
+				"up": {"uv": [6, 6, 10, 10], "texture": "#top"},
+				"down": {"uv": [6, 6, 10, 10], "texture": "#side_n"}
 			}
 		}
 	],
